<resources>
    <string name="app_name">PagarBook</string>
    <string name="please_select_a_language_that_you_can_read_and_understand_comfortably">Please select a language that you can read and understand comfortably</string>
    <string name="_91">+91</string>
    <string name="detaisBelowBussinessD">Please provide details as asked below for unique account creation</string>
    <string name="checkBoxBusiness">Get Impoertant Updates directly on WhatsApp</string>
    <string name="abbr_hours">Hrs</string>
    <string name="abbr_minutes">Mins</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absent">Absent</string>
    <string name="absent_confirm_delete">On marking the staff absent, the below information would be deleted:</string>
    <string name="absent_confirm_late">Less hours = HOURS hours</string>
    <string name="absent_confirm_ot">OT hours = HOURS hours</string>
    <string name="absent_cta">Absent</string>
    <string name="absent_full">Absent</string>
    <string name="absent_header">Absent</string>
    <string name="absent_text">Absent</string>
    <string name="absents">Absents</string>
    <string name="absents_text">Absents</string>
    <string name="acceptable_days">Acceptable input between 1 to 28</string>
    <string name="access_given">Access Given (%d)</string>
    <string name="access_not_given">Access Not Given (%d)</string>
    <string name="access_page_subtitle_location">Location Access</string>
    <string name="access_page_subtitle_selfie_location">Selfie and Location Access</string>
    <string name="access_page_title">Select Staff</string>
    <string name="account_details">Account Details</string>
    <string name="account_details_incorrect">Account details incorrect</string>
    <string name="account_details_subtitle">Please provide staff’s account details for making an online transaction</string>
    <string name="account_details_title">Provide Staff Account Details</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_login">Account Login</string>
    <string name="account_login_helper">Please enter a valid mobile number to access your Pagar Book account</string>
    <string name="account_number">Account Number</string>
    <string name="account_numbers_mismatch">Account Number and Confirm Account Number should be same</string>
    <string name="action_add_expense">Add Entry</string>
    <string name="action_add_loan_save">Add Loan</string>
    <string name="action_add_loan_title">Add loan details</string>
    <string name="action_deduct_loan_save">Deduct Loan</string>
    <string name="action_deduct_loan_title">Deduct loan details</string>
    <string name="action_edit_added_loan_save">Save</string>
    <string name="action_edit_added_loan_title">Edit Loan Amount</string>
    <string name="action_edit_deducted_loan_save">Deduct Loan</string>
    <string name="action_edit_deducted_loan_title">Edit Deducted Loan</string>
    <string name="activate">Activate</string>
    <string name="activate_job">Activate Job</string>
    <string name="activate_job_confirm">Are you sure you want to activate this job</string>
    <string name="activate_staff">Activate Staff</string>
    <string name="activate_staff_helper">The staff will be marked Present on activation.</string>
    <string name="activated_banner_header">Desktop App is Live now!</string>
    <string name="active">Active</string>
    <string name="active_businesses">Active Businesses</string>
    <string name="active_status_text">Active</string>
    <string name="add">Add</string>
    <string name="add_account_details">+ Staff Account Details</string>
    <string name="add_allowance">Add Allowance</string>
    <string name="add_bonus">Add Bonus</string>
    <string name="add_bonus_overtime">Enter Bonus/Overtime</string>
    <string name="add_break">Add Break</string>
    <string name="add_business">Add business</string>
    <string name="add_comment">Comment (Optional)</string>
    <string name="add_deduction">Enter Deduction</string>
    <string name="add_dues_helper">Add staff’s previous dues or outstanding balance</string>
    <string name="add_from_contacts">Add from Contacts</string>
    <string name="add_hours">Add Hours</string>
    <string name="add_loan">Enter Loan</string>
    <string name="add_new_business">Switch or add new business</string>
    <string name="add_new_business_button">Add new business</string>
    <string name="add_notes">Add Note</string>
    <string name="add_number">Add Number</string>
    <string name="add_overtime">Add Overtime</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="add_previous_dues">Add staff’s previous dues</string>
    <string name="add_previous_month">Add Previous Month</string>
    <string name="add_previous_month_one">Salary of previous month will be added after adding previous month</string>
    <string name="add_previous_month_two">Add previous month payment after adding previous month</string>
    <string name="add_previous_week">Add Previous Week</string>
    <string name="add_previous_weekly_one">Salary of previous week will be added on adding previous week</string>
    <string name="add_previous_weekly_two">Add previous week payment after adding previous week</string>
    <string name="add_staff">Add Staff</string>
    <string name="add_staff_context">Staff will receive regular attendance, payments updates via SMS on this number</string>
    <string name="add_staff_location_access">Give Location attendance access</string>
    <string name="add_staff_salary">Add staff’s salary</string>
    <string name="add_staff_selfie_and_location_access">Give Selfie and Location attendance access</string>
    <string name="add_staff_text">Please fill in the below fields to create your staff and manage their expenses</string>
    <string name="add_transaction">Add Payment</string>
    <string name="add_work">Enter work</string>
    <string name="add_work_rates">Add Work Rates</string>
    <string name="add_work_text">Add Work</string>
    <string name="added_paid_holiday">Added Paid Holiday</string>
    <string name="address">Address</string>
    <string name="address_helper">Please make sure you fill address correctly as you won’t be able to edit later.</string>
    <string name="address_line_one">Address Line 1</string>
    <string name="address_line_three">Address Line 3</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="address_line_two_optional">Address Line 2 (Optional)</string>
    <string name="advance">Advance</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="advance_carry">Old Advance</string>
    <string name="advance_of_month">MONTH Advance</string>
    <string name="agent_code_hint">Agent Referral Code (Optional)</string>
    <string name="agent_code_placeholder">Provided by our the sales agent</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_full_screen_message">Namaste! It\'s time for Daily Attendance</string>
    <string name="alarm_notification_message">It\'s time for Daily Attendance</string>
    <string name="alarm_popup_description">Now you can set an alarm for Daily Attendance</string>
    <string name="alarm_popup_heading">Daily Attendance Alarm</string>
    <string name="all_approved">All Approved</string>
    <string name="allow_daily_attendance">Allow Daily Attendance</string>
    <string name="allow_self_attendance">Allow Self Attendance</string>
    <string name="allow_self_attendance_staff_profile">Turn on attendance access</string>
    <string name="allow_self_attendance_staff_profile_text">Do you want to allow staff to mark their attendance?</string>
    <string name="allow_staff">Staff shall download app to view their attendance and payment records</string>
    <string name="allow_staff_attendance">Allow Staff to Mark Attendance</string>
    <string name="allowance">Allowance</string>
    <string name="allowance_amount">Allowance Amount</string>
    <string name="already_logged_in">Staff is already logged in with this number. Phone number can\'t be changed.</string>
    <string name="already_using_number">Already Using (%d)</string>
    <string name="amount">Amount</string>
    <string name="amount_is_mandatory">Amount is mandatory</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amount_with_unit">Amount (₹)</string>
    <string name="applicant_list">Candidate List</string>
    <string name="applicant_list_helper">There are no candidate for this job. Share this job to get best candidates</string>
    <string name="applicants">APPLICANTS :</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="approval_all">Approve All</string>
    <string name="approval_pending">%d Approval Pending for Today</string>
    <string name="approvals_pending">Approvals Pending</string>
    <string name="approve">Approve</string>
    <string name="approve_attendance">Approve Attendance</string>
    <string name="approved_attendance">Approved Requests</string>
    <string name="approved_snackbar">Attendance approved for DATE</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_after_approval">Staff\'s attendance will be confirmed after your approval</string>
    <string name="attendance_empty_msg">Attendance data is not available for this date</string>
    <string name="attendance_empty_msg_one">Mark Attendance and Deduct Salary for Absents</string>
    <string name="attendance_empty_msg_three">Download Daily Attendance Report</string>
    <string name="attendance_empty_msg_title">Add Staff to enjoy attendance features</string>
    <string name="attendance_empty_msg_two">Add Overtime and Late Fines</string>
    <string name="attendance_help">Learn How Attendance Works</string>
    <string name="from_day_to_day">DAY to DAY of every month</string>
    <string name="half_day_cta">Half Day</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="present">Present</string>
    <string name="salary_cycle">Salary Cycle</string>
</resources>