<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Activity.AddStaffSalaryActivity">



    <LinearLayout
        android:id="@+id/llOpeningBalance"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/app_bar_faq"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_blue"
        android:orientation="horizontal"
        app:elevation="0dp">


        <ImageView
            android:id="@+id/btnBackAddStaffSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_staff"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_staff_salary"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_staff_amount"
        style="@style/text_input_for_add_staff_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/payment_amount"
        app:layout_constraintTop_toBottomOf="@+id/til_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_staff_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_for_add_staff_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="#f2f2f2"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/salary_cycle"
        app:layout_constraintTop_toBottomOf="@+id/til_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_staff_cycle_add_staff_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/from_day_to_day"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnContinueAddStaffSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        android:text="Continue" />

</androidx.constraintlayout.widget.ConstraintLayout>