<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="6dp"
    android:tag="layout/item_attendance_0"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:id="@+id/fl_multiple_employees_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="manish"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.00 Hrs"
                    android:layout_gravity="end"
                    android:textSize="12sp"
                    android:textColor="#858585" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_monthly_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_present"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_border_grey_corner_4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingStart="12dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="6dp"
                        android:text="@string/present"
                        android:textSize="12sp"
                        android:textColor="#858585"/>

                    <TextView
                        android:id="@+id/btn_half_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_border_grey_corner_4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingStart="12dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="12dp"
                        android:textSize="12sp"
                        android:textColor="#858585"
                        android:paddingBottom="6dp"
                        android:text="@string/half_day_cta"/>

                    <TextView
                        android:id="@+id/btn_absent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_border_grey_corner_4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingStart="12dp"
                        android:paddingTop="6dp"
                        android:textColor="#858585"
                        android:paddingEnd="12dp"
                        android:textSize="12sp"
                        android:paddingBottom="6dp"
                        android:text="@string/absent_cta"
                        />
                </LinearLayout>


                <ImageView
                    android:id="@+id/iv_extras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_arrow_expand" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
